# Panzer-GG-Multieffects-Pedal

./: .gitignore  CMakeLists.txt
docs/superpowers/plans/: 2026-04-07-phase1-plugin-base.md  2026-04-09-phase2-dsp.md
docs/superpowers/specs/: 2026-04-09-phase2-dsp-design.md
src/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AmpProcessor.cpp  AmpProcessor.h  DelayProcessor.cpp  DelayProcessor.h  DspModule.h  GateProcessor.cpp  GateProcessor.h  IrCabProcessor.cpp  IrCabProcessor.h  ModProcessor.cpp  ModProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h  ZoneKnob.h
src/logic/: ModeManager.cpp  ModeManager.h  PresetManager.cpp  PresetManager.h
tests/: ModeManagerTest.cpp  ParameterTests.cpp  PresetManagerTest.cpp  ProcessorSmokeTest.cpp
